fix(MovieDetails): fixed css wraping on categories

--- a/client/src/components/MovieDetails/MovieDetailsStyles.module.css
+++ b/client/src/components/MovieDetails/MovieDetailsStyles.module.css
@@ -98,6 +98,7 @@
     align-items: center;
     justify-content: flex-start;
     gap: .5em;
+    flex-wrap: wrap;
 }
 
 .categories a {
